Fix overflow bug in column when drawing card to another column

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -69,6 +69,7 @@ body {
 	margin-left: 20px;
 	margin-bottom: 25px;
 	border-radius: 5px;
+	overflow: visible;
 }
 
 .card-list {
